# VTncEditor

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  WebApplication.css  cmake command for wasm  imgui.ini  index.html
modules/: Emscripten-wasm.cmake
src/: CMakeLists.txt  VTncEditor.cpp  VTncEditorClass.h  VTncEditorFileDialog.cpp  VTncEditorFileDialog.hpp  colors.h
